# CPCS

./: AdminHome.qml  AdminPage.qml  AdminStudentManagement.qml  CMakeLists.txt  ConsultationLog.qml  ConsultationProcess.qml  ConsultationRecords.qml  ConsultationSupervision.qml  CounselorChat.qml  CustomDialogs.qml  DatabaseHandler.cpp  DatabaseHandler.h  Login.qml  Main.qml  MentalHealthLibrary.qml  MentalLiterature.qml  MessageCenter.qml  PermissionManagement.qml  PersonalCenter.qml  ProfessionalResources.qml  PsychologicalTests.qml  Register.qml  SelfEvaluation.qml  StudentHome.qml  StudentPage.qml  TPersonalCenter.qml  TeacherHome.qml  TeacherManagement.qml  TeacherPage.qml  UserManagement.qml  adminManager.js  consultationlogmodel.cpp  consultationlogmodel.h  database.db  database.sqbpro  dialogManager.js  main.cpp  pageswitching.js  student.cpp  student.h  (+10 more)
